# candid-java-playground

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  versions.props
.github/: renovate.json
.github/workflows/: publish-python-client.yml  publish-server.yml  test.yml
candid-api-grpc-client/: build.gradle.kts
candid-api-grpc-client/src/main/java/com/candid/api/client/: DenialPredictorClient.java
candid-api-grpc-server/: build.gradle.kts
candid-api-grpc-server-cloud-run/: Dockerfile  build.gradle.kts
candid-api-grpc-server-cloud-run/deploy/: cloudrun.yaml
candid-api-grpc-server-cloud-run/src/main/java/com/candid/api/cloudrun/: CloudRunServer.java  HealthCheckService.java
candid-api-grpc-server-cloud-run/src/main/resources/: logback.xml
candid-api-grpc-server-cloud-run/src/test/java/com/candid/api/cloudrun/: CloudRunIntegrationTest.java  CloudRunServerTest.java  HealthCheckServiceTest.java  LoggingConfigurationTest.java
candid-api-grpc-server/src/main/java/com/candid/api/server/: DenialPredictionModelService.java  DenialPredictorServer.java  DenialPredictorService.java  ModelMetadata.java
candid-api-proto/: build.gradle.kts
candid-api-proto/src/main/proto/: denial_predictor.proto
candid-api-python-client/: README.md  pyproject.toml
candid-api-python-client/candid_api/: __init__.py
candid-inference-impl/: README.md  build.gradle.kts
candid-inference-impl/scripts/: export_model_template.py
candid-inference-impl/src/main/resources/models/: calibration_params.json  feature_metadata.json
(+14 files in other folders)
