[tool.poetry]
name = "candid-denial-predictor-client"
version = "0.1.0"
description = "Python client for Candid Denial Predictor gRPC service"
authors = ["Candid Health"]
readme = "README.md"
packages = [{include = "candid_api"}]

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.77.0"
protobuf = "^4.33.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
